@@ -2,6 +2,8 @@
 v7.0.0-git
 ----------
 
+[mms] Add backend configuration option to use body structure data to more
+      accurately determine whether a message contains attachments.
 [jan] Show warning on S/MIME page if personal certificate has expired.
 [mjr] Improve support for vTodo iTip handling.
 [mms] Add resent information to message header display.
